<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_home" />

    <item
        android:id="@+id/bottom_nav_recipes"
        android:icon="@drawable/ic_restaurant_menu"
        android:title="@string/bottom_recipes" />

    <item
        android:id="@+id/bottom_nav_add"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/bottom_add" />

    <item
        android:id="@+id/bottom_nav_favorites"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/bottom_favorites" />

    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/bottom_profile" />

</menu>
